
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-requests"
version = "1.0.0"
description = "Asynchronous HTTP requests"
readme = "README.md"
authors = [{ name = "Andrea Sergi", email = "andrea.serg1@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["http", "requests", "api", "asyncio"]
dependencies = [
    "requests",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/sclash/AsyncRequests"