
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-http-requests"
version = "0.0.6"
description = "Asynchronous HTTP requests"
readme = "README.md"
authors = [{ name = "Andrea Sergi", email = "andrea.serg1@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["http", "requests", "api", "asyncio"]
dependencies = [
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
    "dataclasses>=0.6",
    "progressbar2>=4.3.2",
    'tomli>=2.0.1; python_version < "3.11"',
    "setuptools>=80.9.0",
    "pandas>=2.3.3",
]
requires-python = ">=3.9"

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/sclash/AsyncRequests"
